GitHub CoPilot improvements

--- a/top4cyber.html
+++ b/top4cyber.html
@@ -13,6 +13,13 @@
     />
     <title>Top 4 Cybersecurity Ideas</title>
 
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Top 4 Cybersecurity Ideas" />
+    <meta property="og:description" content="Top four cybersecurity practices: passwords, MFA, updates, phishing awareness, and data protection." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://johnfulton.org/top4cyber.html" />
+    <meta name="twitter:card" content="summary" />
+
     <link rel="stylesheet" href="css/coffeegrinder.css" />
     <link rel="stylesheet" href="css/wireframe-theme.css" />
     <script>
@@ -25,6 +32,8 @@
     ></script>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="icon" type="image/x-icon" href="jf.png" />
+    <!-- Dark Mode Theme Switcher -->
+    <script src="js/theme.js"></script>
   </head>
 
   <body data-active-page="cyber">
@@ -41,6 +50,8 @@
           </p>
           <div id="nav-placeholder"></div>
         </div>
+      </header>
+    </div>
       </header>
     </div>
 
