--- a/aarp.html
+++ b/aarp.html
@@ -9,12 +9,21 @@
     <meta name="keywords" content="AARP, scams, fraud, prevention, cybersecurity, elder fraud, FTC, IC3">
     <title>Avoiding Scams – AARP Guidance</title>
 
+    <!-- Open Graph Meta Tags for Social Sharing -->
+    <meta property="og:title" content="Avoiding Scams – AARP Guidance" />
+    <meta property="og:description" content="AARP top guidance for avoiding scams, protecting personal information, helping loved ones, and steps to take if victimized." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://johnfulton.org/aarp.html" />
+    <meta name="twitter:card" content="summary" />
+
     <link rel="stylesheet" href="css/coffeegrinder.css">
     <link rel="stylesheet" href="css/wireframe-theme.css">
     <script>document.createElement("picture");</script>
     <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="jf.png">
+    <!-- Dark Mode Theme Switcher -->
+    <script src="js/theme.js"></script>
 </head>
 
  <body data-active-page="cyber">
@@ -27,6 +36,7 @@
                 </a>
                 <p class="paragraph tagline">
                     Lecturer and Student Coordinator, Computing Sciences, Franklin University
+                </p>
                 </p>
                 <div id="nav-placeholder"></div>
             </div>
