--- a/aarp.html
+++ b/aarp.html
@@ -7,7 +7,35 @@
     <meta name="description"
         content="AARP top guidance for avoiding scams, protecting personal information, helping loved ones, and steps to take if victimized.">
     <meta name="keywords" content="AARP, scams, fraud, prevention, cybersecurity, elder fraud, FTC, IC3">
-    <title>Avoiding Scams – AARP Guidance</title>
+    <title>AARP Scam Prevention Guide | How to Avoid Fraud | John Fulton</title>
+
+    <!-- Schema.org Breadcrumb -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://johnfulton.org/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Fraud Prevention & Cybersecurity",
+          "item": "https://johnfulton.org/cyber.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "AARP Fraud Prevention Guide",
+          "item": "https://johnfulton.org/aarp.html"
+        }
+      ]
+    }
+    </script>
 
     <!-- Open Graph Meta Tags for Social Sharing -->
     <meta property="og:title" content="Avoiding Scams – AARP Guidance" />
@@ -18,6 +46,9 @@
 
     <link rel="stylesheet" href="css/coffeegrinder.css">
     <link rel="stylesheet" href="css/wireframe-theme.css">
+    <!-- Meta Tags -->
+    <meta name="author" content="John Fulton" />
+    <link rel="canonical" href="https://johnfulton.org/aarp.html" />
     <script>document.createElement("picture");</script>
     <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
     <link rel="stylesheet" href="css/main.css">
