--- a/top4cyber.html
+++ b/top4cyber.html
@@ -11,7 +11,35 @@
       name="keywords"
       content="cybersecurity, phishing, MFA, strong passwords, updates, data protection"
     />
-    <title>Top 4 Cybersecurity Ideas</title>
+    <title>Top 4 Cybersecurity Best Practices | Protect Your Data Online</title>
+
+    <!-- Schema.org Breadcrumb -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [
+        {
+          "@type": "ListItem",
+          "position": 1,
+          "name": "Home",
+          "item": "https://johnfulton.org/"
+        },
+        {
+          "@type": "ListItem",
+          "position": 2,
+          "name": "Fraud Prevention & Cybersecurity",
+          "item": "https://johnfulton.org/cyber.html"
+        },
+        {
+          "@type": "ListItem",
+          "position": 3,
+          "name": "Top 4 Cybersecurity Best Practices",
+          "item": "https://johnfulton.org/top4cyber.html"
+        }
+      ]
+    }
+    </script>
 
     <!-- Open Graph Meta Tags for Social Sharing -->
     <meta property="og:title" content="Top 4 Cybersecurity Ideas" />
@@ -32,6 +60,9 @@
     ></script>
     <link rel="stylesheet" href="css/main.css" />
     <link rel="icon" type="image/x-icon" href="jf.png" />
+    <!-- Meta Tags -->
+    <meta name="author" content="John Fulton" />
+    <link rel="canonical" href="https://johnfulton.org/top4cyber.html" />
     <!-- Dark Mode Theme Switcher -->
     <script src="js/theme.js"></script>
   </head>
