More CoPilot cleanup

--- a/aarp.html
+++ b/aarp.html
@@ -54,7 +54,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="jf.png">
     <!-- Dark Mode Theme Switcher -->
-    <script src="js/theme.js"></script>
+    <script defer src="js/theme.js"></script>
 </head>
 
  <body data-active-page="cyber">
