--- a/cyber.html
+++ b/cyber.html
@@ -56,7 +56,7 @@
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/cyber.html" />
     <!-- Dark Mode Theme Switcher -->
-    <script src="js/theme.js"></script>
+    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="cyber">
