--- a/top4cyber.html
+++ b/top4cyber.html
@@ -64,7 +64,7 @@
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/top4cyber.html" />
     <!-- Dark Mode Theme Switcher -->
-    <script src="js/theme.js"></script>
+    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="cyber">
@@ -164,6 +164,6 @@
       <div class="coffee-span-12"></div>
     </div>
 
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
   </body>
 </html>
