--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/contact.html" />
     <!-- Dark Mode Theme Switcher -->
-    <script src="js/theme.js"></script>
+    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="contact">
