--- a/courses.html
+++ b/courses.html
@@ -36,7 +36,7 @@
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/courses.html" />
     <!-- Dark Mode Theme Switcher -->
-    <script src="js/theme.js"></script>
+    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="courses">
