--- a/resume.html
+++ b/resume.html
@@ -35,7 +35,7 @@
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/resume.html" />
     <!-- Dark Mode Theme Switcher -->
-    <script src="js/theme.js"></script>
+    <script defer src="js/theme.js"></script>
   </head>
   <body data-active-page="resume">
     <div class="row full-width-row header">
