--- a/other.html
+++ b/other.html
@@ -34,8 +34,6 @@
     <!-- Meta Tags -->
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/other.html" />
-    <!-- Dark Mode Theme Switcher -->
-    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="other">
@@ -125,6 +123,6 @@
       <div class="coffee-span-12"></div>
     </div>
 
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
   </body>
 </html>
