--- a/aarp.html
+++ b/aarp.html
@@ -44,6 +44,7 @@
     <meta property="og:url" content="https://johnfulton.org/aarp.html" />
     <meta name="twitter:card" content="summary" />
 
+
     <link rel="stylesheet" href="css/coffeegrinder.css">
     <link rel="stylesheet" href="css/wireframe-theme.css">
     <!-- Meta Tags -->
@@ -53,8 +54,6 @@
     <script src="js/picturefill.min.js" class="picturefill" async="async"></script>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="jf.png">
-    <!-- Dark Mode Theme Switcher -->
-    <script defer src="js/theme.js"></script>
 </head>
 
  <body data-active-page="cyber">
@@ -146,7 +145,7 @@
         <div class="coffee-span-12"></div>
     </div>
 
-   <script src="js/layout.js"></script>
+   <script defer src="js/layout.js"></script>
 
 </body>
 
