--- a/courses.html
+++ b/courses.html
@@ -35,8 +35,6 @@
     <!-- Meta Tags -->
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/courses.html" />
-    <!-- Dark Mode Theme Switcher -->
-    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="courses">
@@ -244,6 +242,6 @@
       <div class="coffee-span-12"></div>
     </div>
 
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
   </body>
 </html>
