--- a/cyber.html
+++ b/cyber.html
@@ -55,8 +55,6 @@
     <!-- Meta Tags -->
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/cyber.html" />
-    <!-- Dark Mode Theme Switcher -->
-    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="cyber">
@@ -121,6 +119,6 @@
     <div class="row full-width-row footer">
       <div class="coffee-span-12"></div>
     </div>
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
   </body>
 </html>
