--- a/merit.html
+++ b/merit.html
@@ -34,8 +34,6 @@
     <!-- Meta Tags -->
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/merit.html" />
-    <!-- Dark Mode Theme Switcher -->
-    <script defer src="js/theme.js"></script>
   </head>
 
   <body data-active-page="merit">
@@ -332,7 +330,7 @@
     <div class="row full-width-row footer">
       <div class="coffee-span-12"></div>
     </div>
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
 
   </body>
 </html>
