--- a/resume.html
+++ b/resume.html
@@ -34,8 +34,6 @@
     <!-- Meta Tags -->
     <meta name="author" content="John Fulton" />
     <link rel="canonical" href="https://johnfulton.org/resume.html" />
-    <!-- Dark Mode Theme Switcher -->
-    <script defer src="js/theme.js"></script>
   </head>
   <body data-active-page="resume">
     <div class="row full-width-row header">
@@ -392,6 +390,6 @@
       <div class="coffee-span-12"></div>
     </div>
 
-    <script src="js/layout.js"></script>
+    <script defer src="js/layout.js"></script>
   </body>
 </html>
