--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,10 @@
     <meta property="og:description" content="Connect with John Fulton, a lecturer and student coordinator at Franklin University. Contact information, email, LinkedIn, and Google Scholar profiles." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://johnfulton.org/contact.html" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Contact John Fulton" />
+    <meta name="twitter:description" content="Connect with John Fulton at Franklin University. Email, LinkedIn, and scholar profiles available." />
     <link rel="stylesheet" href="css/coffeegrinder.css" />
     <link rel="stylesheet" href="css/wireframe-theme.css" />
     <script>
