--- a/courses.html
+++ b/courses.html
@@ -18,8 +18,10 @@
     <meta property="og:description" content="Discover the courses taught by John Fulton, a lecturer at Franklin University. Classes in computer science, cybersecurity, web development, and analytics." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://johnfulton.org/courses.html" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Courses Taught by John Fulton" />
+    <meta name="twitter:description" content="Discover computer science and cybersecurity courses taught by John Fulton at Franklin University." />
     <link rel="stylesheet" href="css/coffeegrinder.css" />
     <link rel="stylesheet" href="css/wireframe-theme.css" />
     <script>
