--- a/cyber.html
+++ b/cyber.html
@@ -36,10 +36,13 @@
     </script>
     <!-- Open Graph Meta Tags for Social Sharing -->
     <meta property="og:title" content="Cybersecurity & Fraud Prevention Resources by John Fulton" />
-    <meta property="og:description" content="Find networking resources and presentations by John Fulton on cybersecurity, fraud prevention, networking, and web design." />
+    <meta property="og:description" content="Find resources and presentations by John Fulton on cybersecurity, fraud prevention, phishing awareness, and online safety." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://johnfulton.org/cyber.html" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Cybersecurity & Fraud Prevention Resources" />
+    <meta name="twitter:description" content="Learn cybersecurity best practices and fraud prevention tips from John Fulton." />
     <link rel="stylesheet" href="css/coffeegrinder.css" />
     <link rel="stylesheet" href="css/wireframe-theme.css" />
     <script>
