--- a/index.html
+++ b/index.html
@@ -123,7 +123,10 @@
         </p>
       </article>
       <div class="coffee-span-4 coffee-549-span-12 coffee-700-span-12">
-        <img src="John.jpg" alt="John Fulton, Computing Sciences Lecturer at Franklin University with 35+ years of software development experience" />
+        <picture>
+          <source srcset="John.webp" type="image/webp" />
+          <img src="John.jpg" alt="John Fulton, Computing Sciences Lecturer at Franklin University with 35+ years of software development experience" loading="lazy" />
+        </picture>
       </div>
       <div id="footer-placeholder"></div>
     </main>
