--- a/top4cyber.html
+++ b/top4cyber.html
@@ -42,11 +42,14 @@
     </script>
 
     <!-- Open Graph Meta Tags for Social Sharing -->
-    <meta property="og:title" content="Top 4 Cybersecurity Ideas" />
-    <meta property="og:description" content="Top four cybersecurity practices: passwords, MFA, updates, phishing awareness, and data protection." />
+    <meta property="og:title" content="Top 4 Cybersecurity Best Practices | Protect Your Data" />
+    <meta property="og:description" content="Learn the top four cybersecurity practices: strong passwords, MFA, regular updates, phishing awareness, and data protection." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://johnfulton.org/top4cyber.html" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Top 4 Cybersecurity Best Practices" />
+    <meta name="twitter:description" content="Protect your data with strong passwords, MFA, updates, and awareness of phishing threats." />
 
 
     <link rel="stylesheet" href="css/coffeegrinder.css" />
