--- a/aarp.html
+++ b/aarp.html
@@ -38,11 +38,14 @@
     </script>
 
     <!-- Open Graph Meta Tags for Social Sharing -->
-    <meta property="og:title" content="Avoiding Scams – AARP Guidance" />
-    <meta property="og:description" content="AARP top guidance for avoiding scams, protecting personal information, helping loved ones, and steps to take if victimized." />
+    <meta property="og:title" content="AARP Scam Prevention Guide | Avoid Fraud by John Fulton" />
+    <meta property="og:description" content="Learn AARP guidance for avoiding scams, protecting personal information, helping loved ones, and steps to take if victimized." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://johnfulton.org/aarp.html" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="AARP Scam Prevention Guide" />
+    <meta name="twitter:description" content="Learn how to avoid fraud and protect yourself and loved ones from scams." />
 
 
     <link rel="stylesheet" href="css/coffeegrinder.css">
