--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,10 @@
     <meta property="og:description" content="View the detailed professional resume of John Fulton. Extensive career in software development, education, and technology leadership." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://johnfulton.org/resume.html" />
-    <meta name="twitter:card" content="summary" />
+    <meta property="og:image" content="https://johnfulton.org/John.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="John Fulton - Professional Resume" />
+    <meta name="twitter:description" content="View the detailed professional resume of John Fulton with 35+ years of software development experience." />
     <link rel="stylesheet" href="css/coffeegrinder.css" />
     <link rel="stylesheet" href="css/wireframe-theme.css" />
     <script>
