--- a/contact.html
+++ b/contact.html
@@ -60,36 +60,54 @@
       <article
         class="coffee-span-8 coffee-880-span-8 coffee-549-span-12 coffee-700-span-12"
       >
-        <br />
+        <div class="vcard" itemscope itemtype="https://schema.org/Person">
+          <address class="org-info">
+            <h3 class="heading-1">Office Location</h3>
+            <div itemprop="workLocation" itemscope itemtype="https://schema.org/Place">
+              <p class="paragraph">
+                <span itemprop="name">Frasch Hall, Room 203</span><br>
+                <span itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
+                  <span itemprop="streetAddress">201 S. Grant Ave.</span><br>
+                  <span itemprop="addressLocality">Columbus</span>, <span itemprop="addressRegion">OH</span> <span itemprop="postalCode">43215</span>
+                </span>
+              </p>
+            </div>
+          </address>
 
-        <h3 class="heading-1">John Fulton</h3>
-        <h3 class="heading-1">M.S. Comp. Sci., M.S. Cybersecurity</h3>
-        <h3 class="heading-1">
-          Lecturer and Student Coordinator, Computing Sciences
-        </h3>
-        <h3 class="heading-1">203 Frasch Hall</h3>
-        <h3 class="heading-1">Franklin University</h3>
-        <h3 class="heading-1">201 S. Grant Ave. Columbus, OH 43215</h3>
+          <section class="contact-methods">
+            <h3 class="heading-1">Contact Information</h3>
+            <p class="paragraph">
+              <strong>Phone:</strong> <a href="tel:+16149476445" itemprop="telephone">614-947-6445</a><br>
+              <strong>Email:</strong> <a href="mailto:john.fulton2@franklin.edu" itemprop="email">john.fulton2@franklin.edu</a>
+            </p>
+          </section>
 
-        <h3 class="heading-1">614-947-6445</h3>
-        <h3 class="heading-1">john.fulton2@franklin.edu</h3>
-        <a href="https://www.linkedin.com/in/johnfultonorg/" target="_blank"
-          ><h3 class="heading-1">Visit LinkedIn</h3></a
-        >
-        <a
-          href="https://www.franklin.edu/about-us/faculty-staff/faculty-profiles/fulton-john"
-          target="_blank"
-          ><h3 class="heading-1">Visit Franklin Faculty Profile</h3></a
-        >
-        <a
-          href="https://scholar.google.com/citations?user=eIgYwe8AAAAJ"
-          target="_blank"
-          ><h3 class="heading-1">Visit Google Scholar</h3></a
-        >
-        <br />
+          <section class="professional-profiles">
+            <h3 class="heading-1">Professional Profiles</h3>
+            <ul class="profile-links">
+              <li>
+                <a href="https://www.linkedin.com/in/johnfultonorg/" target="_blank" rel="noopener noreferrer" itemprop="sameAs" class="profile-link-linkedin">
+                  <img src="socialicons/linkedin-icon-png-transparent-images--pictures--becuo-4.png" alt="LinkedIn" class="profile-icon">
+                  LinkedIn Profile
+                </a>
+              </li>
+              <li>
+                <a href="https://www.franklin.edu/about-us/faculty-staff/faculty-profiles/fulton-john" target="_blank" rel="noopener noreferrer" class="profile-link-franklin">
+                  <img src="socialicons/Franklin.jpg" alt="Franklin University" class="profile-icon">
+                  Franklin University Faculty Profile
+                </a>
+              </li>
+              <li>
+                <a href="https://scholar.google.com/citations?user=eIgYwe8AAAAJ" target="_blank" rel="noopener noreferrer" itemprop="sameAs" class="profile-link-scholar">
+                  <span class="profile-icon-text">📚</span>
+                  Google Scholar
+                </a>
+              </li>
+            </ul>
+          </section>
+        </div>
       </article>
       <div id="footer-placeholder"></div>
-    </main>
     <div class="row full-width-row footer">
       <div class="coffee-span-12"></div>
     </div>
