--- a/contact.html
+++ b/contact.html
@@ -71,6 +71,11 @@
                   <span itemprop="addressLocality">Columbus</span>, <span itemprop="addressRegion">OH</span> <span itemprop="postalCode">43215</span>
                 </span>
               </p>
+              <p class="paragraph">
+                <a href="https://www.google.com/maps/d/u/0/edit?mid=1cP3bpIlnPgJynEyMTII0V0nWij8-MXM&usp=sharing" target="_blank" rel="noopener noreferrer" class="map-link">
+                  View Office Location & Parking on Google Maps
+                </a>
+              </p>
             </div>
           </address>
 
